--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reservation-page",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
@@ -9,6 +9,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --prod"
+  },
+  "engines": {
+    "node": "10.x"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +25,8 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
     "npm-font-open-sans": "^1.1.0",
     "rxjs": "^6.2.2",
     "zone.js": "~0.8.26"
@@ -44,6 +49,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "request": "^2.81.0",
+    "tape": "^4.7.0",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   }
