--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js",
     "serve": "ng serve --port=8000",
     "build": "ng build --prod",
+    "gh-build": "ng build --prod --base-href 'https://flikt.github.io/reservation-page/'",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
